--- a/AppMovil/LuckyPets/app/src/main/res/layout/activity_my_balance.xml
+++ b/AppMovil/LuckyPets/app/src/main/res/layout/activity_my_balance.xml
@@ -82,7 +82,8 @@
             android:layout_width="257dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:background="@drawable/background_view_2" />
+            android:background="@drawable/background_view_2"
+            android:spinnerMode="dropdown"/>
 
         <TextView
             android:layout_width="match_parent"
