--- a/AppMovil/LuckyPets/app/src/main/res/layout/item_post.xml
+++ b/AppMovil/LuckyPets/app/src/main/res/layout/item_post.xml
@@ -33,35 +33,68 @@
                 android:layout_weight="2"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/txtProvincia"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
-                    android:fontFamily="@font/merriweather_bold"
-                    android:text="Provincia: "
-                    android:textColor="#DAC9C7"
-                    android:textSize="16sp" />
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="5dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/merriweather_bold"
+                        android:text="Provincia: "
+                        android:textColor="#DAC9C7"
+                        android:textSize="18sp" />
+                    <TextView
+                        android:id="@+id/txtProvincia"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/merriweather_regular"
+                        android:textColor="#DAC9C7"
+                        android:textSize="16sp" />
+                </LinearLayout>
 
-                <TextView
-                    android:id="@+id/txtDuracion"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
-                    android:fontFamily="@font/merriweather_bold"
-                    android:text="Duración: "
-                    android:textColor="#DAC9C7"
-                    android:textSize="16sp" />
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="5dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/merriweather_bold"
+                        android:text="Duración: "
+                        android:textColor="#DAC9C7"
+                        android:textSize="18sp" />
+                    <TextView
+                        android:id="@+id/txtDuracion"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/merriweather_regular"
+                        android:textColor="#DAC9C7"
+                        android:textSize="16sp" />
+                </LinearLayout>
 
-                <TextView
-                    android:id="@+id/txtDescripcion"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
-                    android:fontFamily="@font/merriweather_bold"
-                    android:text="Descripción: "
-                    android:textColor="#DAC9C7"
-                    android:textSize="16sp" />
+                    android:orientation="vertical"
+                    android:layout_marginBottom="5dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/merriweather_bold"
+                        android:text="Descripción: "
+                        android:textColor="#DAC9C7"
+                        android:textSize="18sp" />
+                    <TextView
+                        android:id="@+id/txtDescripcion"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/merriweather_regular"
+                        android:textColor="#DAC9C7"
+                        android:textSize="16sp" />
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
