--- a/AppMovil/LuckyPets/app/src/main/res/layout/activity_new_post.xml
+++ b/AppMovil/LuckyPets/app/src/main/res/layout/activity_new_post.xml
@@ -141,6 +141,18 @@
                 android:textColorHint="#DAC9C7"
                 android:textSize="20sp" />
 
+            <CheckBox
+                android:id="@+id/checkBoxAceptarCoste"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="5dp"
+                android:buttonTint="@color/background2"
+                android:minHeight="48dp"
+                android:text="Acepto el coste (15 CR) por la publicación."
+                android:textColor="@color/background2"
+                android:textSize="16sp" />
+
             <Button
                 android:id="@+id/btnPublicarAnuncio"
                 android:layout_width="match_parent"
