--- a/AppMovil/LuckyPets2/app/src/main/res/layout/activity_new_post.xml
+++ b/AppMovil/LuckyPets2/app/src/main/res/layout/activity_new_post.xml
@@ -51,17 +51,18 @@
                 android:padding="8dp"
                 android:text="Imágen:"
                 android:textColor="#92736F"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="20dp"
                 android:textSize="16sp" />
 
             <ImageView
                 android:id="@+id/imgNewPost"
                 android:layout_width="156dp"
-                android:layout_height="106dp"
-                android:layout_marginTop="30dp"
+                android:layout_height="125dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginRight="10dp"
                 android:contentDescription="Imagen del nuevo anuncio"
-                android:scaleType="centerCrop" />
+                android:scaleType="centerCrop"
+                android:src="@drawable/placeholder_image_2" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -133,16 +134,30 @@
                 android:fontFamily="@font/merriweather_bold"
                 android:hint=""
                 android:padding="16dp"
+                android:gravity="top|start"
+                android:inputType="textMultiLine"
                 android:singleLine="false"
                 android:textColor="#DAC9C7"
                 android:textColorHint="#DAC9C7"
                 android:textSize="20sp" />
 
+            <CheckBox
+                android:id="@+id/checkBoxAceptarCoste"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="5dp"
+                android:buttonTint="@color/background2"
+                android:minHeight="48dp"
+                android:text="Acepto el coste (15 CR) por la publicación."
+                android:textColor="@color/background2"
+                android:textSize="16sp" />
+
             <Button
                 android:id="@+id/btnPublicarAnuncio"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="70dp"
+                android:layout_marginTop="50dp"
                 android:background="@drawable/background_view_green"
                 android:onClick="publicarAnuncio"
                 android:text="Publicar anuncio"
@@ -160,8 +175,6 @@
                 android:text="Cancelar"
                 android:textColor="#DAC9C7"
                 android:textSize="16sp" />
-
-
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
