--- a/AppMovil/LuckyPets/app/src/main/res/layout/activity_post.xml
+++ b/AppMovil/LuckyPets/app/src/main/res/layout/activity_post.xml
@@ -51,7 +51,8 @@
                 android:layout_marginTop="30dp"
                 android:layout_marginRight="10dp"
                 android:contentDescription="Imagen del anuncio"
-                android:scaleType="centerCrop" />
+                android:scaleType="centerCrop"
+                android:src="@drawable/placeholder_image_2"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
