--- a/AppMovil/LuckyPets/app/src/main/res/layout/activity_principal.xml
+++ b/AppMovil/LuckyPets/app/src/main/res/layout/activity_principal.xml
@@ -110,9 +110,9 @@
         android:layout_height="54dp"
         android:layout_below="@id/searchEditText"
         android:layout_alignParentEnd="true"
-        android:layout_margin="30dp"
+        android:layout_margin="35dp"
         android:layout_marginEnd="26dp"
-        android:src="@drawable/autorenew_logo"
+        android:src="@drawable/autorenew_logo_2"
         android:contentDescription="Actualizar datos"
         android:clickable="true"
         android:focusable="true" />
