--- a/AppMovil/LuckyPets3/app/src/main/res/layout/activity_post.xml
+++ b/AppMovil/LuckyPets3/app/src/main/res/layout/activity_post.xml
@@ -153,7 +153,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginBottom="30dp">
+                android:layout_marginBottom="180dp">
                 <TextView
                     android:id="@+id/labelDescripcion"
                     android:layout_width="wrap_content"
@@ -168,6 +168,35 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/merriweather_regular"
                     android:textColor="#92736F"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btnReservar"
+                    android:layout_width="121dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/background_view_yellow"
+                    android:onClick="Reservar"
+                    android:text="Reservar"
+                    android:textColor="#DAC9C7"
+                    android:textSize="16sp" />
+
+                <Button
+                    android:id="@+id/btnLlamar"
+                    android:layout_width="121dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/background_view_green"
+                    android:onClick="Llamar"
+                    android:text="Llamar"
+                    android:textColor="#DAC9C7"
                     android:textSize="16sp" />
             </LinearLayout>
 
