--- a/AppMovil/LuckyPets3/app/src/main/res/layout/popup_menu.xml
+++ b/AppMovil/LuckyPets3/app/src/main/res/layout/popup_menu.xml
@@ -19,26 +19,14 @@
         android:textSize="20dp" />
 
     <TextView
-        android:id="@+id/action_change_email"
+        android:id="@+id/action_my_posts"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
         android:focusable="true"
         android:fontFamily="@font/merriweather_bold"
         android:padding="12dp"
-        android:text="Cambiar correo electrónico"
-        android:textColor="@color/custom_menu_text_color"
-        android:textSize="20dp" />
-
-    <TextView
-        android:id="@+id/action_change_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:focusable="true"
-        android:fontFamily="@font/merriweather_bold"
-        android:padding="12dp"
-        android:text="Cambiar contraseña"
+        android:text="Mis anuncios"
         android:textColor="@color/custom_menu_text_color"
         android:textSize="20dp" />
 
@@ -51,6 +39,18 @@
         android:fontFamily="@font/merriweather_bold"
         android:padding="12dp"
         android:text="Acerca de"
+        android:textColor="@color/custom_menu_text_color"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/action_help"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:fontFamily="@font/merriweather_bold"
+        android:padding="12dp"
+        android:text="Ayuda"
         android:textColor="@color/custom_menu_text_color"
         android:textSize="20dp" />
 
