--- a/AppMovil/LuckyPets/app/src/main/res/layout/activity_my_balance.xml
+++ b/AppMovil/LuckyPets/app/src/main/res/layout/activity_my_balance.xml
@@ -62,8 +62,8 @@
             android:hint="00.00"
             android:padding="16dp"
             android:singleLine="true"
-            android:textColor="#DAC9C7"
-            android:textColorHint="#DAC9C7"
+            android:textColor="#17A4EA"
+            android:textColorHint="#17A4EA"
             android:textSize="20sp" />
 
         <TextView
