--- a/AppMovil/LuckyPets/app/src/main/res/layout/activity_post.xml
+++ b/AppMovil/LuckyPets/app/src/main/res/layout/activity_post.xml
@@ -100,8 +100,8 @@
                     android:id="@+id/txtProvincia"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/merriweather_regular"
-                    android:textColor="#92736F"
+                    android:fontFamily="@font/merriweather_bold"
+                    android:textColor="#006495"
                     android:textSize="16sp" />
             </LinearLayout>
 
@@ -122,8 +122,30 @@
                     android:id="@+id/txtDuracion"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/merriweather_regular"
+                    android:fontFamily="@font/merriweather_bold"
+                    android:textColor="#006495"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="30dp">
+                <TextView
+                    android:id="@+id/labelCoste"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/merriweather_bold"
+                    android:text="Coste: "
                     android:textColor="#92736F"
+                    android:textSize="18sp" />
+                <TextView
+                    android:id="@+id/txtCoste"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/merriweather_bold"
+                    android:textColor="#006495"
                     android:textSize="16sp" />
             </LinearLayout>
 
@@ -144,8 +166,8 @@
                     android:id="@+id/txtTelefonoPost"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/merriweather_regular"
-                    android:textColor="#92736F"
+                    android:fontFamily="@font/merriweather_bold"
+                    android:textColor="#006495"
                     android:textSize="16sp" />
             </LinearLayout>
 
@@ -153,7 +175,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginBottom="180dp">
+                android:layout_marginBottom="100dp">
                 <TextView
                     android:id="@+id/labelDescripcion"
                     android:layout_width="wrap_content"
@@ -167,7 +189,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/merriweather_regular"
-                    android:textColor="#92736F"
+                    android:textColor="#006495"
                     android:textSize="16sp" />
             </LinearLayout>
 
